--- a/src/layouts/ClassLayout.astro
+++ b/src/layouts/ClassLayout.astro
@@ -40,7 +40,7 @@ const { title, description } = Astro.props as Props;
 
   .class-layout__content {
     display: grid;
-    gap: var(--space-xl, 3rem);
+    gap: 0;
   }
 
   .class-layout__footer:not(:empty) {
